--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,3 +371,14 @@ svg {
     stroke: #FFC300;
     }
   }
+
+/* Style inputs with type="text", select elements and textareas */
+  input[type=text], input[type=email], select, textarea {
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
