--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,6 +161,11 @@ section {
   display: none;
 }
 
+.sectionAccess p {
+  padding: 0;
+  margin: 0;
+}
+
 /* Footer */
 .footer-bg {
     background-color: var(--SK-color4);
